Update and rename sample_deploy_to_AWSECS.yml to deploy_production_to_AWS.yml
Modified the filename for deploying production instance

--- a/.github/workflows/deploy_production_to_AWS.yml
+++ b/.github/workflows/deploy_production_to_AWS.yml
@@ -1,13 +1,4 @@
-# このワークフローはGitHubによって認定されていないアクションを使用します。
-# それらはサードパーティによって提供され、
-# 別個の利用規約、プライバシーポリシー、
-# ドキュメントを参照してください。
-
-# GitHub では、コミット SHA にアクションをピン留めすることが推奨されます。
-# 新しいバージョンを取得するには、SHA を更新する必要があります。
-# タグまたはブランチを参照することもできますが、アクションは警告なしに変更される可能性があります。
-
-name: Deploy to Amazon ECS
+name: Deploy Production to Amazon ECS
 
 on:
   pull_request:
