--- a/appspec.yml
+++ b/appspec.yml
@@ -6,5 +6,9 @@ files:
 hooks:
   BeforeInstall:
       - location: aws/scripts/before_install.sh
+        timeout: 300
+        runas: root
   AfterInstall:
       - location: aws/scripts/after_install.sh
+        timeout: 300
+        runas: root
