update script to ubuntu

--- a/cloudformation/template.yaml
+++ b/cloudformation/template.yaml
@@ -399,14 +399,14 @@ Resources:
         "Fn::Base64":
           !Sub |
               #!/bin/bash
-              yum install ruby -y
+              sudo apt update
+              sudo apt install ruby-full
+              sudo apt install wget
+              cd /home/ubuntu
               wget https://aws-codedeploy-${AWS::Region}.s3.${AWS::Region}.amazonaws.com/latest/install
               chmod +x ./install
-              ./install auto
-              cd /tmp
-              yum install -y https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/linux_amd64/amazon-ssm-agent.rpm
-              systemctl enable amazon-ssm-agent
-              systemctl start amazon-ssm-agent
+              sudo ./install auto
+              sudo snap start amazon-ssm-agent
 
   AutoScalingGroup:
     Type: AWS::AutoScaling::AutoScalingGroup
