--- a/cloudformation/template.yaml
+++ b/cloudformation/template.yaml
@@ -245,6 +245,16 @@ Resources:
                 Action: 
                 - "s3:getObject"
                 Resource: !Sub arn:${AWS::Partition}:s3:::${WebappDeploymentBucket}/*
+        -
+          PolicyName: "allow-access-secret-manager"
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              -
+                Effect: "Allow"
+                Action: 
+                - "secretsmanager:*"
+                Resource: "*"
   IDCProvider:
       Type: AWS::IAM::OIDCProvider
       Properties:
