--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,4 +67,4 @@ jobs:
       - run: |
           echo "Deploying branch ${{ env.GITHUB_REF }} to ${{ github.event.inputs.environment }}"
           commit_hash=`git rev-parse HEAD`
-          aws deploy create-deployment --application-name pv-validation-hub --deployment-group-name pvvalhub --github-location repository=$GITHUB_REPOSITORY,commitId=$commit_hash --ignore-application-stop-failures
+          aws deploy create-deployment --application-name pv-validation-hub-dev --deployment-group-name pvvalhub --github-location repository=$GITHUB_REPOSITORY,commitId=$commit_hash --ignore-application-stop-failures
