updated ignore for secret tfvars, expanded backend dockerfile

--- a/terraform/variables/terraform.example
+++ b/terraform/variables/terraform.example
@@ -1,4 +1,4 @@
-// Copy this file, rename it to terraform.tfvars, and fill-in the variables to be able to deploy this application
+// Copy this file, rename it to terraform.secret.tfvars, and fill-in the variables to be able to deploy this application
 
 aws-access-key = "value"
 aws-secret-key = "value"
