Completed API dockerfile, updated readme, added supervisor config file to maintain running the server

--- a/valhub/Dockerfile
+++ b/valhub/Dockerfile
@@ -4,19 +4,18 @@ FROM python:3.10-slim as base
 # docker build --progress=plain -t "hmm:Dockerfile" -f valhub/Dockerfile .
 ADD valhub /root/valhub
 
-
+ARG djangosk
+ENV DJANGO_SECRET_KEY=${djangosk}
 ENV PORT 5001
 EXPOSE 5001
 
 RUN apt-get update -qq
 # RUN apt-get --assume-yes install python3-pip
-RUN apt-get --assume-yes install mariadb-client
-RUN mkdir canucme
-RUN echo $(ls -a)
+RUN apt-get --assume-yes install mariadb-client supervisor
 RUN apt-get --assume-yes install python3-dev default-libmysqlclient-dev build-essential
 RUN python3 -m pip install --upgrade pip
 WORKDIR /root/valhub
 RUN python3 -m pip install -r requirements.txt
 
 RUN cd ./valhub
-RUN python3 manage.py runserver 0.0.0.0:5001
+CMD ["/usr/bin/supervisord", "-c", "/root/valhub/supervisord.conf"] 
