implemented docker-compose up for easy local start, fixed django migrations with account primary key.

--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,9 +1,8 @@
 FROM postgres:15-alpine as base
 
-# Only used for local development. Emulates a backend database. 
+# Only used for local development. Emulates a backend database. Env is not actually user here. 
 
 ENV POSTGRES_PASSWORD=valhub
-ENV POSTGRES_DB=valhub
-ENV POSTGRES_USER=valhub
+ENV user=valhub
 ENV PORT 5432
 EXPOSE 5432
