--- a/valhub/Dockerfile
+++ b/valhub/Dockerfile
@@ -1,15 +1,18 @@
 FROM python:3.10-slim as base
 
-# Make sure to call Docker build from parent directory! 
 # docker build --progress=plain -t "hmm:Dockerfile" -f valhub/Dockerfile .
-ADD valhub /root/valhub
+WORKDIR /root
+RUN mkdir valhub
+WORKDIR /root/valhub
+COPY . .
 
 ARG djangosk
 ENV DJANGO_SECRET_KEY=${djangosk}
-ENV PORT 5001
-EXPOSE 5001
+ENV PORT 8005
+EXPOSE 8005
 
 RUN apt-get update -qq
+RUN apt-get install -y libpq-dev python3-psycopg2
 # RUN apt-get --assume-yes install python3-pip
 RUN apt-get --assume-yes install mariadb-client supervisor postgresql-client
 RUN apt-get --assume-yes install python3-dev default-libmysqlclient-dev build-essential
@@ -18,4 +21,5 @@ WORKDIR /root/valhub
 RUN python3 -m pip install -r requirements.txt
 
 RUN cd ./valhub
+RUN python3 manage.py makemigrations
 CMD ["/usr/bin/supervisord", "-c", "/root/valhub/supervisord.conf"] 
