--- a/node-docker-ecs/Dockerfile
+++ b/node-docker-ecs/Dockerfile
@@ -9,7 +9,7 @@ COPY package*.json ./
 
 # Install any needed packages specified in package.json
 RUN yarn install --frozen-lockfile --non-interactive
-RUN apk install iptables
+RUN apk add iptables
 
 # Copying the rest of the code to the working directory
 COPY . .
