added support for automatically running migrate on new compose start

--- a/custom.conf
+++ b/custom.conf
@@ -1,5 +1,8 @@
 include classpath("application.conf")
 
+# This file is used to configure the SQS queue. 
+# The file name needs to match what is used in the docker-compose file.
+
 queues {
   valhub_submission_queue {
     defaultVisibilityTimeout = 10 seconds
