--- a/valhub/supervisord.conf
+++ b/valhub/supervisord.conf
@@ -8,3 +8,11 @@ stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 autostart=true
+
+[program:valhub_migrate]
+directory=/root/valhub
+command=python3 /root/valhub/manage.py migrate
+autostart=true
+autorestart=false
+startsecs=10
+depends_on=valhub_webserver
