--- a/valhub/supervisord.conf
+++ b/valhub/supervisord.conf
@@ -9,3 +9,13 @@ stdout_logfile_maxbytes=0
 redirect_stderr=true
 autostart=true
 
+[program:valhub_migrate]
+directory=/root/valhub
+command=python3 /root/valhub/manage.py migrate && \
+        python3 /root/valhub/manage.py createsuperuser --noinput \
+        --username=$DJANGO_ADMIN_USERNAME --email=admin@example.com
+autorestart=false
+numprocs=1
+startretries=0
+startsecs=10
+depends_on=valhub_webserver
