--- a/s3Emulator/Dockerfile
+++ b/s3Emulator/Dockerfile
@@ -1,15 +1,24 @@
 # Use an official Python runtime as the base image
 FROM python:3.9-slim-buster
 
+WORKDIR /
+
+RUN apt-get update && apt-get install git sudo -y
+RUN git clone https://github.com/kperrynrel/time-shift-validation-hub.git
+
 # Set the working directory
 WORKDIR /app
 
 # Copy the required files to the working directory
 COPY . .
 
+# Install Requirements
 RUN pip install -r requirements.txt
 
+# Move simulated bucket to location 
 RUN mv ./pv-validation-hub-bucket /
+
+RUN ./devprep.sh
 
 # Install the required dependencies
 RUN pip install flask boto3
