--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-djangosk=replace_with_django_secret_key
+djangosk=django-insecure-y&pp1if&0y)pxtmqf_@o1br(&-6mrxv**f5%&73d@d51kscvg!
 POSTGRES_PASSWORD=valhub
 POSTGRES_USER=valhub
