--- a/workers/requirements.txt
+++ b/workers/requirements.txt
@@ -1,13 +1,10 @@
-mysqlclient==2.1.1
-boto3==1.26.16
-requests==2.28.1
-djangorestframework==3.14.0
-django-cors-headers==3.13.0
-psycopg2-binary
-psycopg2
 pandas
 matplotlib
 scikit-learn
 seaborn
+boto3
 
 ########## add analytical task/evaluation script dependcies here to be pre-installed on the runner.
+s3:5000//pv-validation-hub-bucket/submission_files/submission_user_1/submission_1/pvanalytics-osd-module.py
+curl http://localhost:5000/pv-validation-hub-bucket/submission_files/submission_user_1/submission_1/pvanalytics-osd-module.py -o pvanalytics-osd-module.py
+curl -O s3:5000/pv-validation-hub-bucket/submission_files/submission_user_1/submission_1:pvanalytics-osd-module.py
