--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
       - "8005:8005"
     depends_on:
       - db
+      - sqs
 
   s3:
     build: ./s3Emulator
@@ -62,8 +63,18 @@ services:
       - "ELASTICMQ_OPTS=-Dconfig.file=/opt/docker/custom.conf"
     volumes:
       - ./custom.conf:/opt/docker/custom.conf
+      
+  worker:
+    build:
+      context: ./workers
+    env_file:
+      - .env
+    ports:
+      - "8500:8500"
     depends_on:
       - api
+      - s3
+      - sqs
 
 volumes:
  valhub:
