feat: udpate endpoints to support updating submission result; modify submission worker to enable the entire workflow
valhub/submissions/urls.py and valhub/submissions/views.py:
    - add an endpoint to update the submission result

workers/submission_worker_local.py:
    - add logic to pull all analysis-related files, including the runner
    script, data files and validation data files, the file_test_link.csv
    file and requirements.txt file for the runner script (notice that
    the requirements.txt for the submission module will be placed under
    "/tmp/")
    - add logic to import runner script as a module and execute the "run"
    function within the runner script before collecting results and
    updating the backend (notice that the logic to install dependencies
    for the submission module and execute the designated function within
    submission module is now commented out in the runner script, as there
    is a bug in the script itself and "pip install sig-decomp" will fail)

--- a/workers/requirements.txt
+++ b/workers/requirements.txt
@@ -5,3 +5,4 @@ seaborn
 boto3
 
 ########## add analytical task/evaluation script dependcies here to be pre-installed on the runner.
+Requests==2.28.2
