--- a/s3Emulator/Dockerfile
+++ b/s3Emulator/Dockerfile
@@ -27,6 +27,7 @@ RUN pip install -r requirements.txt
 
 # Move simulated bucket to location 
 RUN mv ./pv-validation-hub-bucket /
+RUN rm -r /pv-validation-hub-bucket/submission_files
 RUN mv /time-shift-validation-hub/data/file_data/* /pv-validation-hub-bucket/data_files/analytical/
 RUN mv /time-shift-validation-hub/data/validation_data/* /pv-validation-hub-bucket/data_files/ground_truth/
 # Install the required dependencies
