--- a/.github/workflows/deployStaging.yml
+++ b/.github/workflows/deployStaging.yml
@@ -1,17 +1,17 @@
-name: Build and Test
+name: Build and Deploy
 
 on:
   push:
     branches: [ develop ]
-  pull_request:
-    branches: [ develop ]
 
 env:
-  applicationfolder: valhub
-  AWS_REGION: us-west-2
-  S3BUCKET: pv-validation-hub-bucket
-  DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
-
+    APIFOLDER: valhub
+    WORKERFOLDER: workers
+    FEFOLDER: frontend
+    AWS_REGION: us-west-2
+    S3BUCKET: pv-validation-hub-bucket
+    WEBBUCKET: pv-validation-hub-website
+    DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}      
 
 jobs:
   build-fe:
