--- a/valhub/Dockerfile
+++ b/valhub/Dockerfile
@@ -1,11 +1,9 @@
 FROM python:3.10-slim as base
 
 # docker build --progress=plain -t "hmm:Dockerfile" -f valhub/Dockerfile .
-WORKDIR $HOME
-RUN mkdir .aws
-COPY $HOME/.aws $HOME/.aws
-
 WORKDIR /root
+RUN mkdir -p .aws
+COPY $HOME/.aws /root/.aws
 RUN mkdir valhub
 WORKDIR /root/valhub
 COPY . .
