--- a/valhub/supervisord.conf
+++ b/valhub/supervisord.conf
@@ -18,3 +18,10 @@ startretries=0
 startsecs=10
 depends_on=valhub_webserver
 autostart=true
+
+[program:nginx]
+command=nginx -g 'daemon off;'
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
+autostart=true
