--- a/valhub/Dockerfile.prod
+++ b/valhub/Dockerfile.prod
@@ -49,4 +49,4 @@ COPY --from=builder /root/valhub /usr/share/nginx/html
 EXPOSE 80
 
 # Start Nginx
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["/usr/bin/supervisord", "-c", "/root/valhub/supervisord.conf"]
