--- a/valhub/Dockerfile.prod
+++ b/valhub/Dockerfile.prod
@@ -43,7 +43,7 @@ FROM nginx:latest
 COPY nginx/default.conf /etc/nginx/conf.d/default.conf
 
 # Copy the built Django application and dependencies from the builder stage
-COPY --from=builder /root/valhub /usr/share/nginx/html
+COPY --from=builder /root/valhub /root/valhub
 COPY --from=builder /usr/local/lib/python3.10/site-packages /usr/local/lib/python3.10/site-packages
 
 # Expose port 80 for incoming HTTP traffic
