--- a/valhub/Dockerfile.prod
+++ b/valhub/Dockerfile.prod
@@ -26,7 +26,7 @@ ENV PORT 8005
 
 # Install required system dependencies including Nginx
 RUN apt-get update -qq && \
-    apt-get install -y libpq-dev python3-psycopg2 mariadb-client postgresql-client supervisor nginx
+    apt-get install -y libpq-dev python3-psycopg2 mariadb-client postgresql-client supervisor
 
 # Install Python dependencies
 RUN apt-get install -y python3-dev default-libmysqlclient-dev build-essential && \
@@ -36,11 +36,8 @@ RUN apt-get install -y python3-dev default-libmysqlclient-dev build-essential &&
 # Create Django database migrations
 RUN python3 manage.py makemigrations
 
-# Copy Nginx configuration
-COPY nginx/default.conf /etc/nginx/conf.d/default.conf
-
 # Expose ports for incoming HTTP traffic (80 and 8005 needed for nginx to forward to Django)
 EXPOSE 80 443 22 8005
 
 # Start Nginx and Supervisor
-CMD ["/usr/bin/supervisord", "-c", "/root/valhub/supervisord.conf"]
+CMD ["/usr/bin/supervisord", "-c", "/root/valhub/supervisord.prod.conf"]
