tweaked dockerfile so local compose still works on non-linux machines
Signed-off-by: Duncan Ragsdale <88173870+Thistleman@users.noreply.github.com>

--- a/valhub/Dockerfile
+++ b/valhub/Dockerfile
@@ -2,8 +2,8 @@ FROM python:3.10-slim as base
 
 # docker build --progress=plain -t "hmm:Dockerfile" -f valhub/Dockerfile .
 WORKDIR /root
-RUN mkdir -p .aws
-COPY .aws /root/.aws
+# RUN mkdir -p .aws
+# COPY .aws /root/.aws
 RUN mkdir valhub
 WORKDIR /root/valhub
 COPY . .
