--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,15 +41,15 @@ jobs:
           export DOCKER_BUILDKIT=1
           docker build --build-arg admin_username="placeholder" --build-arg admin_password="replaceme" --build-arg djangosk="placeholder" -t pv/val:tag -f Dockerfile .
 
-#  build-worker:
-#    name: Build and Test
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v2
-#        name: Checkout Repository
+  build-worker:
+    name: Build and Test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        name: Checkout Repository
 
-#      - name: build
-#        run: |
-#          cd workers
-#          export DOCKER_BUILDKIT=1
-#          docker build -t pv/val:tag -f Dockerfile .
+      - name: build
+        run: |
+          cd workers
+          export DOCKER_BUILDKIT=1
+          docker build -t pv/val:tag -f Dockerfile .
