added program step for static files
Signed-off-by: Duncan Ragsdale <88173870+Thistleman@users.noreply.github.com>

--- a/valhub/supervisord.conf
+++ b/valhub/supervisord.conf
@@ -18,3 +18,13 @@ startretries=0
 startsecs=10
 depends_on=valhub_webserver
 autostart=true
+
+[program:valhub_staticfiles]
+directory=/root/valhub
+command=python3 /root/valhub/manage.py collectstatic
+autorestart=false
+numprocs=1
+startretries=0
+startsecs=10
+depends_on=valhub_migrate
+autostart=true
