--- a/valhub/Dockerfile.prod
+++ b/valhub/Dockerfile.prod
@@ -36,7 +36,7 @@ RUN apt-get install -y python3-dev default-libmysqlclient-dev build-essential &&
 # Create Django database migrations
 RUN python3 manage.py makemigrations
 
-# Expose ports for incoming HTTP traffic (80 and 8005 needed for nginx to forward to Django)
+# Expose ports for incoming HTTP traffic
 EXPOSE 80 443 22 8005
 
 # Start Nginx and Supervisor
