--- a/valhub/Dockerfile.prod
+++ b/valhub/Dockerfile.prod
@@ -17,10 +17,12 @@ COPY . .
 # Set Django admin username, password, and other environment variables
 ARG admin_username
 ARG admin_password
+ARG admin_email
 ARG djangosk
 
-ENV DJANGO_ADMIN_USERNAME=$admin_username
-ENV DJANGO_ADMIN_PASSWORD=$admin_password
+ENV DJANGO_SUPERUSER_USERNAME=${admin_username}
+ENV DJANGO_SUPERUSER_PASSWORD=${admin_password}
+ENV DJANGO_SUPERUSER_EMAIL=${admin_email}
 ENV DJANGO_SECRET_KEY=${djangosk}
 ENV PORT 8005
 
