--- a/valhub/supervisord.conf
+++ b/valhub/supervisord.conf
@@ -18,3 +18,13 @@ startretries=0
 startsecs=10
 depends_on=valhub_webserver
 autostart=true
+
+[program:valhub_superuser]
+directory=/root/valhub
+command=python3 /root/valhub/manage.py createsuperuser --noinput
+autorestart=false
+numprocs=1
+startretries=0
+startsecs=10
+depends_on=valhub_migrate
+autostart=true
