adjusted to use home aws dir
Signed-off-by: Duncan Ragsdale <88173870+Thistleman@users.noreply.github.com>

--- a/workers/Dockerfile.prod
+++ b/workers/Dockerfile.prod
@@ -5,7 +5,7 @@ WORKDIR /root
 
 # Copy AWS configuration if needed
 RUN mkdir -p .aws
-COPY .aws /root/.aws
+COPY $HOME/.aws /root/.aws
 
 RUN mkdir worker
 WORKDIR /root/worker
