--- a/workers/Dockerfile.prod
+++ b/workers/Dockerfile.prod
@@ -5,7 +5,7 @@ WORKDIR /root
 
 # Copy AWS configuration if needed
 RUN mkdir -p .aws
-COPY $HOME/.aws /root/.aws
+COPY .aws /root/.aws
 
 RUN mkdir worker
 WORKDIR /root/worker
