added fixes for the workers
Signed-off-by: Duncan Ragsdale <88173870+Thistleman@users.noreply.github.com>

--- a/workers/Dockerfile.prod
+++ b/workers/Dockerfile.prod
@@ -22,7 +22,7 @@ RUN apt-get update -qq
 RUN apt-get install -y libpq-dev python3-psycopg2
 # RUN apt-get --assume-yes install python3-pip
 RUN apt-get --assume-yes install mariadb-client supervisor postgresql-client
-RUN apt-get --assume-yes install python3-dev default-libmysqlclient-dev build-essential
+RUN apt-get --assume-yes install python3-dev default-libmysqlclient-dev build-essential cmake
 RUN python3 -m pip install --upgrade pip
 WORKDIR /root/worker
 RUN python3 -m pip install -r requirements.txt
