--- a/workers/Dockerfile
+++ b/workers/Dockerfile
@@ -13,7 +13,7 @@ EXPOSE 65535
 RUN apt-get update -qq
 RUN apt-get install -y libpq-dev python3-psycopg2 curl nano
 # RUN apt-get --assume-yes install python3-pip
-RUN apt-get --assume-yes install mariadb-client supervisor postgresql-client
+RUN apt-get --assume-yes install mariadb-client supervisor postgresql-client libopenblas-dev
 RUN apt-get --assume-yes install python3-dev default-libmysqlclient-dev build-essential cmake git
 WORKDIR /root
 WORKDIR /root/worker
