--- a/workers/requirements.txt
+++ b/workers/requirements.txt
@@ -4,8 +4,8 @@ pandas==1.5.3
 pvanalytics==0.1.3
 pvlib==0.9.4
 ruptures==1.1.7
-seaborn==0.11.1
-solar_data_tools==0.7.0
+seaborn
+solar_data_tools
 scikit-learn
 boto3
 
