--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,14 +6,15 @@ on:
     types: [published]
 
 env:
-  AWS_REGION: MY_AWS_REGION                   # set this to your preferred AWS region, e.g. us-west-2
-  ECR_REPOSITORY: MY_ECR_REPOSITORY           # set this to your Amazon ECR repository name
-  ECS_SERVICE: MY_ECS_SERVICE                 # set this to your Amazon ECS service name
-  ECS_CLUSTER: MY_ECS_CLUSTER                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: MY_ECS_TASK_DEFINITION # set this to the path to your Amazon ECS task definition
-                                               # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: MY_CONTAINER_NAME           # set this to the name of the container in the
-                                               # containerDefinitions section of your task definition
+  AWS_REGION: AWS_REGION                      
+  ECR_REPOSITORY: ECR_REPOSITORY              
+  ECS_WORKER_SERVICE: ECS_SERVICE 
+  ECS_WORKER_CLUSTER: ECS_CLUSTER        
+  ECS_API_SERVICE: ECS_SERVICE 
+  ECS_API_CLUSTER: ECS_CLUSTER               
+
+  API_CONTAINER_NAME: API_CONTAINER_NAME  
+  WORKER_CONTAINER_NAME: API_CONTAINER_NAME  
 
 jobs:
   deploy_FE:
