--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,11 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.10",
+    "@mui/system": "^5.15.11",
     "@mui/x-data-grid": "^5.17.14",
     "apexcharts": "^3.36.3",
     "axios": "^1.2.0",
+    "prop-types": "^15.8.1",
     "randomcolor": "^0.6.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
