--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-frame-component": "^5.2.3",
     "react-markdown": "^8.0.7",
     "react-modal": "^3.16.1",
+    "react-router": "^6.22.1",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
     "react-share": "^4.4.1",
