added line to create .env in dockerfile for compose
Signed-off-by: Duncan Ragsdale <88173870+Thistleman@users.noreply.github.com>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,12 +7,12 @@ on:
 
 env:
   AWS_REGION: AWS_REGION                      
-  ECR_REPOSITORY: ECR_REPOSITORY              
+  ECR_API_REPOSITORY: ECR_API_REPOSITORY  
+  ECR_WORKER_REPOSITORY: ECR_WORKER_REPOSITORY             
   ECS_WORKER_SERVICE: ECS_SERVICE 
   ECS_WORKER_CLUSTER: ECS_CLUSTER        
   ECS_API_SERVICE: ECS_SERVICE 
   ECS_API_CLUSTER: ECS_CLUSTER               
-
   API_CONTAINER_NAME: API_CONTAINER_NAME  
   WORKER_CONTAINER_NAME: API_CONTAINER_NAME  
 
