--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,6 +3,7 @@ WORKDIR /app
 COPY package.json .
 RUN npm install
 COPY . .
+COPY ./.env.example .env
 RUN npm run build
 RUN npm install -g serve
 EXPOSE 3000
